--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h2>NEW GENERATION TV</h2>
+    <h2 class="title">NEW GENERATION TV</h2>
     <h3>Your Most Present 24/7 TV Channel</h3>
 
     <!-- Second section starts -->
@@ -83,7 +83,7 @@
  <img src="./tv1.jpg" alt="Card 1 Image">
  <div class="card-body">
    <p class="h5 card-title">
-     lorem impls
+     Top Story
    </p>
    <div class="card-text">
      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ullam?
@@ -98,7 +98,7 @@
 <div class="card">
  <img class="card-img-top" src="./tv3.jpg" alt="good image 2">
  <div class="card-body">
-   <div class="h5 card-title">The Second Img</div>
+   <div class="h5 card-title">International</div>
    <div class="card-text">
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. At aliquam perferendis eius repellat explicabo aut, vel repudiandae blanditiis dolore omnis?
    </div>
@@ -112,7 +112,7 @@
 <div class="card">
  <img class="card-img-top" src="./tv2.jpg" alt="Good Image 3">
  <div class="card-body">
-   <div class="h5 card-title">Third Image</div>
+   <div class="h5 card-title">Business</div>
    <div class="card-text">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore harum quidem fugiat illo nam ab nostrum saepe quia? Enim, eaque?              </div>
  </div>
@@ -125,7 +125,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore harum quidem fug
 <div class="card">
  <img src="./tv5.jpg" alt="Good image 4">
  <div class="card-body">
-   <div class="h4 card-title">Fourth Image</div>
+   <div class="h4 card-title">Politics</div>
    <div class="card-text">
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum est illum dolore nihil sint culpa.
    </div>
@@ -139,7 +139,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore harum quidem fug
 <div class="card">
  <img src="./tv6.jpg" alt="Good image 4">
  <div class="card-body">
-   <div class="h4 card-title">Fourth Image</div>
+   <div class="h4 card-title">Sports</div>
    <div class="card-text">
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum est illum dolore nihil sint culpa.
    </div>
@@ -153,7 +153,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore harum quidem fug
 <div class="card">
  <img src="./tv8.jpg" alt="Good image 4">
  <div class="card-body">
-   <div class="h4 card-title">Fourth Image</div>
+   <div class="h4 card-title">Weather</div>
    <div class="card-text">
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum est illum dolore nihil sint culpa.
    </div>
@@ -175,11 +175,11 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore harum quidem fug
 
   Designed with
   <i class="fas fa-heart fa-spin"></i>
-  for NGTV;
+  for NGTV.
 </p>
 </footer>
 
-<footer style="background-color: rgb(240, 77, 13); color: white; text-align: center;">Copyright: © 2022. 
+<footer style="background-color: rgb(31, 18, 211); color: white; text-align: center;">Copyright: © 2022. 
   NGTV All Rights Reserved.</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
